--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^4.1.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -35,6 +36,6 @@
     "eslint-config-next": "15.2.1",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "wrangler": "^3.114.0"
+    "wrangler": "^4.0.0"
   }
 }
