--- a/package.json
+++ b/package.json
@@ -8,34 +8,38 @@
     "start": "next start",
     "lint": "next lint",
     "clean": "find . -name node_modules -o -name .vercel -o -name .wrangler -o -name .DS_Store -o -name .next -o -name package-lock.json -o -name .expo -type d -prune | xargs rm -rf",
-    "preview": "opennextjs-cloudflare && wrangler dev",
-    "deploy": "opennextjs-cloudflare && wrangler deploy",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@types/leaflet": "^1.9.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.479.0",
-    "next": "15.2.1",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "resend": "^4.1.2",
-    "tailwind-merge": "^3.0.2",
+    "next": "^15.3.5",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
+    "resend": "^4.6.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@opennextjs/cloudflare": "^0.5.9",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.3.1",
+    "@opennextjs/cloudflare": "^1.4.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "^20.19.4",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "eslint": "^9.30.1",
     "eslint-config-next": "15.2.1",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "wrangler": "^4.0.0"
+    "typescript": "^5.8.3",
+    "wrangler": "^4.23.0"
   }
 }
